# Ailogy

./: .env.example  .gitignore  README.md  VERSION  ailogy  pyproject.toml  run.sh
backend/app/: __init__.py  ai_client.py  ai_config.py  ai_pipelines.py  ai_status.py  ai_worker.py  cursor.py  db.py  deps.py  main.py  models.py  net.py  ratelimit.py  repo.py  security.py  settings.py  updater.py
backend/app/routers/: __init__.py  ai.py  applications.py  auth.py  entries.py  ingest.py  keys.py  share.py
frontend/about/: about.css  about.js  index.html
frontend/account/: index.html
frontend/account/css/: account.css
frontend/account/js/: account.js
frontend/ai/: index.html
frontend/ai/css/: ai.css
frontend/ai/js/: ai.js
frontend/platform/: index.html
frontend/platform/css/: platform.css
frontend/platform/js/: platform.js
frontend/settings/: index.html  settings.css  settings.js
frontend/shared/css/: theme.css
frontend/shared/js/: header.js  icons.js  page-nav.js  ui.js  updates.js  utils.js
frontend/viewer/: index.html
frontend/viewer/css/: detail.css  timeline.css  viewer.css
frontend/viewer/js/: aliases.js  api.js  search.js  viewer.js
scripts/: admin.py  import_datajson.py
tests/: conftest.py  test_ailog_core.py  test_auth_keys.py  test_backend_health.py  test_entries_api.py  test_ingest.py  test_isolation_share.py  test_ratelimit.py
