[project]
name = "ailogy"
version = "0.1.0"
description = "AI 工作日志的本地服务：CLI 写入，网页瀑布流呈现"
requires-python = ">=3.9"
readme = "README.md"
license = { file = "LICENSE" }

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy>=2.0",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[project.scripts]
ailog = "ailog_cli.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "packages", "ailogy_backend" = "backend" }
packages = ["ailog_core", "ailog_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["packages", "backend"]
